# IsekaiMod

./: .gitignore  CHANGELOG.md  IsekaiMod.sln  README.md  Repository.json
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: python-workflow.yml
IsekaiMod/: Info.json  IsekaiMod - Kopie.csproj  IsekaiMod.csproj  Main.cs  Repository.json  Resources.cs  UMMSettingsUI.cs  packages.config
IsekaiMod/Changes/: ContentAdder.cs
IsekaiMod/Components/: AddExtraAttack.cs  AddExtraOffHandAttack.cs  AddStatBonusIfNotHasFact.cs  AnyWeaponStatReplacementFixed.cs  ArmorNoSpeedPenalty.cs  ContextActionOnNearbyPoint.cs  ContextCalculateAbilityParamsBasedOnClasses.cs  ExtraSummonCount.cs  GainExperienceOnKill.cs  IncreaseSpellDamage.cs  PrerequisiteIsMainCharacter.cs  ReflectDamage.cs  SetAttackerAutoMiss.cs  SetBaseStat.cs  SetFlatFootedOnAttack.cs  SplitOutgoingDamage.cs
IsekaiMod/Config/: AddedContent.cs  AddedContent.json  Blueprints.cs  Blueprints.json  ICollapseableGroup.cs  IDisableableGroup.cs  IUpdatableSettings.cs  ModSettings.cs  ModSupport.cs  NestedSettingGroup.cs  SettingGroup.cs
IsekaiMod/Content/: ContentAdder.cs
IsekaiMod/Extensions/: ExtensionMethods.cs
IsekaiMod/Localization/: LocalizationPack.json  MultiLocalizationPack.cs
IsekaiMod/ModLogic/: ModContextBase.cs
IsekaiMod/Utilities/: ActionFlow.cs  AssetLoader.cs  Attribute.cs  AuraUtils.cs  Constants.cs  DescriptionTools.cs  ExtensionMethods.cs  Helpers.cs  PatchTools.cs  PortraitInjector.cs  StaticReferences.cs  TTCoreExtensions.cs  (+2 more)
Localizer/: pyproject.toml
Localizer/src/: main.py  models.py
(+559 files in other folders)
